--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 		</div>
 		<div id="login">
 			<p class="loginwelcome">Login To Meower</p>
-			<input type="password" placeholder="Enter Your Password." id="pswd1"></input>
-			<input placeholder="Enter Your Username." id="user1"></input>
+			<input type="password" placeholder="Enter Your Password." id="pswd1" autocomplete="off"></input>
+			<input placeholder="Enter Your Username." id="user1" autocomplete="off"></input>
 			<button onclick="auth_login()" id="letsgobttn">Let's go!</button>
 			<button onclick="showpass()" id="showpassbttn">Show/Hide Password</button>
 			<button onclick="ms_alert('Login Screen','This Feature Is coming soon!')" id="gb-bttn">Go Back</button>
