--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 			<p> Details: no lol </p>
 		</div>
 		<div id="login-nocookie">
-			<p id="nocookiewelcome">Welcome to Meower</p>
+			<p id="nocookiewelcome">Welcome to Meower!</p>
 			<button onclick="login()" class="BIG" id="logbttn_l">Log in</button>
 			<button onclick="ms_alert('Login Screen','This Feature Is coming soon!')" class="BIG" id="joinbttn_l">Join</button>
 			<img src="Assets/Art/happymeow.svg" class="CENTERED" id = "meow_login"></img>
-			<p id="login_v">Meower Public Beta V1.1.1, Sister project of Meower Media Co or MMC.</p>
+			<p id="login_v">Meower Public Beta V1.2, Sister project of Meower Media Co or MMC.</p>
 		</div>
 		<div id="login">
 			<p class="loginwelcome">Login To Meower</p>
@@ -69,6 +69,7 @@
 			<div class="SideBar">
 				<button class="meower-styled-button" onclick="ms_alert('Home Navbar','This feature is coming soon!')"><img src="Assets/Art/logout.svg"></img></button>
 				<button onclick="ms_alert('Alert test!', 'This is testing the alert box feature! This will be a feature that will be used for disconnection screens and work in progress features!')">Alert Box Test</button>
+				<button onclick="ms_alert('Home Navbar','Full changelog screen coming soon, Changlog: Added Changelog Button And Fixed Login Screen Alerts')">Change Log</button>
 			</div>
 			<div id = "UsersOnline">
 				<p id="UsersCount">bruh</p>
