--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
 			<button onclick="login()" class="BIG" id="logbttn_l">Log in</button>
 			<button onclick="ms_alert('Login Screen','This Feature Is coming soon!')" class="BIG" id="joinbttn_l">Join</button>
 			<img src="Assets/Art/happymeow.svg" class="CENTERED" id = "meow_login"></img>
-			<p id="login_v">Meower Public Beta V1.2, Sister project of Meower Media Co or MMC.</p>
+			<p id="login_v">Meower Public Beta V1.2.1_WIP, Sister project of Meower Media Co or MMC.</p>
 		</div>
 		<div id="login">
 			<p class="loginwelcome">Login To Meower</p>
 			<form autocomplete="off">
-				<input type="password" placeholder="Enter Your Password." id="pswd1"></input>
+				<input placeholder="Enter Your Password." id="pswd1" style="-webkit-text-security: disc !important;"></input>
 				<input placeholder="Enter Your Username." id="user1"></input>
 			</form>
 			<button onclick="auth_login()" id="letsgobttn">Let's go!</button>
@@ -70,7 +70,7 @@
 			<div class="SideBar">
 				<button class="meower-styled-button" onclick="ms_alert('Home Navbar','This feature is coming soon!')"><img src="Assets/Art/logout.svg"></img></button>
 				<button onclick="ms_alert('Alert test!', 'This is testing the alert box feature! This will be a feature that will be used for disconnection screens and work in progress features!')">Alert Box Test</button>
-				<button onclick="ms_alert('Home Navbar','Full changelog screen coming soon, Changlog: Added Changelog Button And Fixed Login Screen Alerts')">Change Log</button>
+				<button onclick="ms_alert('Home Navbar','Full changelog screen coming soon, Changlog: Fixed Issue with ulist, work in progress new login system')">Change Log</button>
 			</div>
 			<div id = "UsersOnline">
 				<p id="UsersCount">bruh</p>
