--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 			<input type="text" name="post" value="test" id="txtpostpost"></input>
 			<div class="SideBar">
 				<button class="meower-styled-button" onclick="logout()"><img src="Assets/Art/logout.svg"></img></button>
+				<button class="meower-styled-button">Group chats????</button>
 				<button onclick="ms_alert('Alert test!', 'This is testing the alert box feature! This will be a feature that will be used for disconnection screens and work in progress features!')">Alert Box Test</button>
 				<button onclick="ms_alert('Home Navbar','Full changelog screen coming soon, Changelog: Added Logging out!')">Change Log</button>
 			</div>
