Easter egg part 1

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link href="style.css" rel="stylesheet" id="darkmodecss">
 		<link href="animation.css" rel="stylesheet">
 		<script type="text/javascript">
-			var errorhandle = true //Disables Error Handling, For debugging
+			var errorhandle = false //Disables Error Handling, For debugging
 			window.onerror = function(error) {
 				if (errorhandle == true) {
 			  		location.replace("./error.html?error=" + error)
@@ -79,7 +79,7 @@
 			<input type="text" name="post" value="test" id="txtpostpost"></input>
 			<div class="SideBar">
 				<button class="meower-styled-button" onclick="logout()"><img src="Assets/Art/logout.svg"></img></button>
-				<button class="meower-styled-button">Group chats????</button>
+				<!--<button class="meower-styled-button" onclick="groupchats()">Group chats</button>-->
 				<button onclick="ms_alert('Alert test!', 'This is testing the alert box feature! This will be a feature that will be used for disconnection screens and work in progress features!')">Alert Box Test</button>
 				<button onclick="ms_alert('Home Navbar','Full changelog screen coming soon, Changelog: Added Logging out!')">Change Log</button>
 			</div>
@@ -90,6 +90,7 @@
 			<div id="HomeArea">
 				<div class="Post_Home_UI">
 					<div class="Post_Top">
+						<div class="online"></div>
 						<image class="Post_UserImage" src="Assets/Art/Icons/icon_21.svg"></image>
 						<p2 class="Post_User">testttttttttttttttttttttttttttttttttttttttttt</p2>
 					</div>
@@ -101,5 +102,9 @@
 			<p class="loginwelcome">You Have Logged out!</p>
 			<button class="BIG CENTERED" onclick="location.reload()">Wanna log Back in?</button>
 		</div>
+		<div id="group-chats">
+
+		</div>
+		<p id="wthiswrongwithyou">Quit snooping around mobile user</p>
 	</body>
 </html>
