fixed small issue

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 			<input type="text" name="post" value="test" id="txtpostpost"></input>
 			<div class="SideBar">
 				<button class="meower-styled-button" onclick="logout()"><img src="Assets/Art/logout.svg"></img></button>
-				<button class="meower-styled-button" onclick="alert('Group chats','This feature is a work in progress')">Group chats</button>
+				<button class="meower-styled-button" onclick="ms_alert('Group chats','This feature is a work in progress')">Group chats</button>
 				<button onclick="ms_alert('Alert test!', 'This is testing the alert box feature! This will be a feature that will be used for disconnection screens and work in progress features!')">Alert Box Test</button>
 				<button onclick="ms_alert('Home Navbar','Full changelog screen coming soon, Changelog: Fixed posting and a fix to the ACE bug')">Change Log</button>
 			</div>
