--- a/index.html
+++ b/index.html
@@ -23,14 +23,13 @@
 				Your browser does not support the video tag.
 			</video>
 			Meower uses javascript to work, please enable javascript.
-			On a side note, what type of human are you not allowing js in a modern website!
 		</noscript>
 		<div id="meower-style-alert">
 			<div id="msa-alert-box" class="CENTERED">
 				<img src="Assets/Art/alert_bg.png" id="alb_bgimg"></img>
 				<p id="alb-title">Title, Defaulted to Alert</p>
 				<p id="alb-message">Message Content, Needed</p>
-				<button id="alb-button" onclick="alert('this Button does anything you want!')">Do thing, defaulted to Ok</button>
+				<button id="alb-button" onclick="alert('This button does anything you want!')">Do thing, defaulted to Ok</button>
 			</div>
 			<div id="msa-bg"></div>
 		</div>
@@ -43,34 +42,32 @@
 			<div id="responsive_introanim1">
 				<iframe src="" id="introanim1"></iframe>
 			</div>
-			<p> Status: Bruh </p>
-			<p> Details: no lol </p>
 		</div>
 		<div id="login-nocookie">
 			<p id="nocookiewelcome">Welcome to Meower!</p>
 			<button onclick="login()" class="BIG" id="logbttn_l">Log in</button>
 			<button onclick="join()" class="BIG" id="joinbttn_l">Join</button>
 			<img src="Assets/Art/happymeow.svg" class="CENTERED" id = "meow_login"></img>
-			<p id="login_v">Meower Public Beta V1.4.1, Sister project of Meower Media Co or MMC.</p>
+			<p id="login_v">Meower Public Beta V1.4.2, Sister project of Meower Media Co.</p>
 		</div>
 		<div id="login">
-			<p class="loginwelcome">Login To Meower</p>
+			<p class="loginwelcome">Log in to Meower</p>
 			<form autocomplete="off">
-				<input placeholder="Enter Your Password." id="pswd1" style="-webkit-text-security: disc !important;"></input>
-				<input placeholder="Enter Your Username." id="user1"></input>
+				<input placeholder="Enter your password." id="pswd1" style="-webkit-text-security: disc !important;"></input>
+				<input placeholder="Enter your username." id="user1"></input>
 			</form>
 			<button onclick="auth_login()" class="letsgobttn">Let's go!</button>
 			<button onclick="showpass()" class="showpassbttn">Show/Hide Password</button>
-			<button onclick="ms_alert('Login Screen','This Feature Is coming soon!')" class="gb-bttn">Go Back</button>
+			<button onclick="ms_alert('Login Screen','This feature is coming soon!')" class="gb-bttn">Go Back</button>
 		</div>
 		<div id="join">
-			<p class="loginwelcome">Welcome To Meower!</p>
+			<p class="loginwelcome">Welcome to Meower!</p>
 			<form autocomplete="off">
-				<input placeholder="Enter A Password." id="pswd2" style="-webkit-text-security: disc !important;"></input>
-				<input placeholder="Enter A Username." id="user2"></input>
+				<input placeholder="Enter a password." id="pswd2" style="-webkit-text-security: disc !important;"></input>
+				<input placeholder="Enter a username." id="user2"></input>
 			</form>
 			<button onclick="auth_join()" class="letsgobttn">Let's go!</button>
-			<button onclick="showpass2()" class="showpassbttn">Show/Hide Password</button>
+			<button onclick="showpass2()" class="showpassbttn">Show/Hide password</button>
 			<button onclick="ms_alert('Join Screen','This Feature Is coming soon!')" class="gb-bttn">Go Back</button>
 		</div>
 		<div id="home">
@@ -81,11 +78,11 @@
 				<button class="meower-styled-button" onclick="logout()"><img src="Assets/Art/logout.svg"></img></button>
 				<button class="meower-styled-button" onclick="ms_alert('Group chats','This feature is a work in progress')">Group chats</button>
 				<button onclick="ms_alert('Alert test!', 'This is testing the alert box feature! This will be a feature that will be used for disconnection screens and work in progress features!')">Alert Box Test</button>
-				<button onclick="ms_alert('Home Navbar','Full changelog screen coming soon, Changelog: Fixed posting and a fix to the ACE bug')">Change Log</button>
+				<button onclick="ms_alert('Home Navbar','Full changelog screen coming soon, Changelog: Fixed most (if not all) spelling errors!')">Change Log</button>
 			</div>
 			<div id = "UsersOnline">
-				<p id="UsersCount">bruh</p>
-				<p id="UsersOn">PlaceHolder</p>
+				<p id="UsersCount">Placeholder</p>
+				<p id="UsersOn">Placeholder</p>
 			</div>
 			<div id="HomeArea">
 				<div class="Post_Home_UI">
@@ -99,8 +96,8 @@
 			</div>
 		</div>
 		<div id="logout">
-			<p class="loginwelcome">You Have Logged out!</p>
-			<button class="BIG CENTERED" onclick="location.reload()">Wanna log Back in?</button>
+			<p class="loginwelcome">You have logged out!</p>
+			<button class="BIG CENTERED" onclick="location.reload()">Wanna log back in?</button>
 		</div>
 		<div id="group-chats">
 
