last commit part 2

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		<div id="login">
 			<p class="loginwelcome">Log in to Meower</p>
 			<form autocomplete="off">
-				<input placeholder="Enter your password." id="pswd1" style="-webkit-text-security: disc !important;"></input>
+				<input placeholder="Enter your password." id="pswd1" type="password"></input>
 				<input placeholder="Enter your username." id="user1"></input>
 			</form>
 			<button onclick="auth_login()" class="letsgobttn">Let's go!</button>
@@ -64,7 +64,7 @@
 		<div id="join">
 			<p class="loginwelcome">Welcome to Meower!</p>
 			<form autocomplete="off">
-				<input placeholder="Enter a password." id="pswd2" style="-webkit-text-security: disc !important;"></input>
+				<input placeholder="Enter a password." id="pswd2" type="password"></input>
 				<input placeholder="Enter a username." id="user2"></input>
 			</form>
 			<button onclick="auth_join()" class="letsgobttn">Let's go!</button>
