--- a/index.html
+++ b/index.html
@@ -44,12 +44,15 @@
 				<iframe src="" id="introanim1"></iframe>
 			</div>
 		</div>
+		<div id="settings">
+			<p>h</p>
+		</div>
 		<div id="login-nocookie">
 			<p id="nocookiewelcome">Welcome to Meower!</p>
 			<button onclick="login()" class="BIG" id="logbttn_l">Log in</button>
 			<button onclick="join()" class="BIG" id="joinbttn_l">Join</button>
 			<img src="Assets/Art/happymeow.svg" class="CENTERED" id = "meow_login"></img>
-			<p id="login_v">Meower Public Beta V1.4.5.2, Sister project of Meower Media Co.</p>
+			<p id="login_v">Meower HTML Public Beta V1.4.7, Sister project of Meower Media Co.</p>
 		</div>
 		<div id="login">
 			<p class="loginwelcome">Log in to Meower</p>
@@ -79,22 +82,20 @@
 				<button class="meower-styled-button" onclick="logout()"><img src="Assets/Art/logout.svg"></img></button>
 				<!--<button class="meower-styled-button" onclick="ms_alert('Group chats','This feature is a work in progress')">Group chats</button>-->
 				<button onclick="ms_alert('Alert test!', 'This is testing the alert box feature! This will be a feature that will be used for disconnection screens and work in progress features!')">Alert Box Test</button>
-				<button onclick='ms_alert("Home Navbar","Full changelog screen coming soon, Changelog: Fixed Login screen gray text, IN THE MIDDLE OF AN UNFINISHED BUILD.")'>Change Log</button>
+				<button onclick='ms_alert("Home Navbar","Full changelog screen coming soon, Changelog: Online Detection, Other stuff i forgot")'>Chan- ge Log</button>
+				<button class="meower-styled-button" onclick="sussybaka()"><img alt="sus thing"></img></button>
 			</div>
 			<div id = "UsersOnline">
 				<p id="UsersCount">OOPS! The code might not be working!</p>
 				<p id="UsersOn">OOPS! The code might not be working!</p>
 			</div>
 			<div id="HomeArea">
-				<div class="Post_Home_UI_Outer">
-					<div class="Post_Home_UI">
-						<div class="Post_Top">
-							<div class="online"></div>
-							<image class="Post_UserImage" src="Assets/Art/Icons/icon_21.svg"></image>
-							<p2 class="Post_User">testttttttttttttttttttttttttttttttttttttttttt</p2>
-						</div>
-						<p2 class="Post_Text">eeee</p2>
+				<div class="Post_Home_UI">
+					<div class="Post_Top">
+						<image class="Post_UserImage" src="Assets/Art/Icons/icon_21.svg"><div class="online"></div></image>
+						<p2 class="Post_User">testttttttttttttttttttttttttttttttttttttttttt</p2>
 					</div>
+					<p2 class="Post_Text">eeee</p2>
 				</div>
 			</div>
 		</div>
