--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!-- MEOWER HTML5 OR WUI. -->
+<!-- Sample text: Lorem, ipsum fuggdklnvjknerkbjhiodhjhjdrjb, this is the last text this can handle, after all you all know i love cats, more the meower mascot, in speaking of that, remember the mascot war? i was just upset, but i do realize how bad my mascot was, also i hate st for what they did lol, so uh back to cats, i have a cat, also i saw ducks 3 days ago. wait i still have room to talk, okay, but why im waitng to fill all this up AAAAAAAAAAAAAAAAAA *ded*-->
 <!DOCTYPE html>
 <html>
 	<head>
@@ -44,15 +45,12 @@
 				<iframe src="" id="introanim1"></iframe>
 			</div>
 		</div>
-		<div id="settings">
-			<p>h</p>
-		</div>
 		<div id="login-nocookie">
 			<p id="nocookiewelcome">Welcome to Meower!</p>
 			<button onclick="login()" class="BIG" id="logbttn_l">Log in</button>
 			<button onclick="join()" class="BIG" id="joinbttn_l">Join</button>
 			<img src="Assets/Art/happymeow.svg" class="CENTERED" id = "meow_login"></img>
-			<p id="login_v">Meower HTML Public Beta V1.4.7, Sister project of Meower Media Co.</p>
+			<p id="login_v">Meower HTML Public Beta V1.4.7.2, Sister project of Meower Media Co.</p>
 		</div>
 		<div id="login">
 			<p class="loginwelcome">Log in to Meower</p>
@@ -75,15 +73,18 @@
 			<button onclick="ms_alert('Join Screen','This Feature Is coming soon!')" class="gb-bttn">Go Back</button>
 		</div>
 		<div id="home">
-			<button onclick="post()" id="PostButton">Post</button>
-			<button onclick="showusers()" id="ShowUsers">Show Users Online</button>
-			<input type="text" name="post" value="test" id="txtpostpost"></input>
+			<div id="HomeArea2">
+				<button onclick="post()" id="PostButton">Post</button>
+				<button onclick="showusers()" id="ShowUsers">Show Users Online</button>
+				<input type="text" name="post" value="test" id="txtpostpost"></input>
+			</div>
 			<div class="SideBar">
 				<button class="meower-styled-button" onclick="logout()"><img src="Assets/Art/logout.svg"></img></button>
 				<!--<button class="meower-styled-button" onclick="ms_alert('Group chats','This feature is a work in progress')">Group chats</button>-->
 				<button onclick="ms_alert('Alert test!', 'This is testing the alert box feature! This will be a feature that will be used for disconnection screens and work in progress features!')">Alert Box Test</button>
-				<button onclick='ms_alert("Home Navbar","Full changelog screen coming soon, Changelog: Online Detection, Other stuff i forgot")'>Chan- ge Log</button>
+				<button onclick='ms_alert("Home Navbar","Full changelog screen coming soon, Changelog: i was too lazy to do settings, sorry.")'>Chan- ge Log</button>
 				<button class="meower-styled-button" onclick="sussybaka()"><img alt="sus thing"></img></button>
+				<button class="meower-styled-button" onclick="tohomeSB()"></button>
 			</div>
 			<div id = "UsersOnline">
 				<p id="UsersCount">OOPS! The code might not be working!</p>
@@ -97,6 +98,10 @@
 					</div>
 					<p2 class="Post_Text">eeee</p2>
 				</div>
+			</div>
+			<div id="Settings">
+				<p2>Settings</p2>
+				<div class="onoff"><p2 class="option_header">On/Off testing</p2><p2 class="option_content">Lorem, ipsum fuggdklnvjknerkbjhiodhjhjdrjb, this is the last text this can handle, after all you all know i love cats, more the meower mascot, in speaking of that, remember the mascot war? i was just upset, but i do realize how bad my mascot was, also i hate st for what they did lol, so uh back to cats, i have a cat, also i saw ducks 3 days ago. wait i still have room to talk, okay, but why im waitng to fill all this up AAAAAAAAAAAAAAAAAA *ded*</p2><button class="changebutton"><img src="./Assets/Art/Buttons/toggle_false_orange.svg"></img></button></div>
 			</div>
 		</div>
 		<div id="logout">
