totally added group chats

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			<button onclick="login()" class="BIG" id="logbttn_l">Log in</button>
 			<button onclick="join()" class="BIG" id="joinbttn_l">Join</button>
 			<img src="Assets/Art/happymeow.svg" class="CENTERED" id = "meow_login"></img>
-			<p id="login_v">Meower HTML Public Beta V1.4.7.2, Sister project of Meower Media Co.</p>
+			<p id="login_v">Meower HTML Public Beta V1.4.7.3, Sister project of Meower Media Co.</p>
 		</div>
 		<div id="login">
 			<p class="loginwelcome">Log in to Meower</p>
@@ -80,11 +80,11 @@
 			</div>
 			<div class="SideBar">
 				<button class="meower-styled-button" onclick="logout()"><img src="Assets/Art/logout.svg"></img></button>
-				<!--<button class="meower-styled-button" onclick="ms_alert('Group chats','This feature is a work in progress')">Group chats</button>-->
 				<button onclick="ms_alert('Alert test!', 'This is testing the alert box feature! This will be a feature that will be used for disconnection screens and work in progress features!')">Alert Box Test</button>
-				<button onclick='ms_alert("Home Navbar","Full changelog screen coming soon, Changelog: i was too lazy to do settings, sorry.")'>Chan- ge Log</button>
+				<button onclick='ms_alert("Home Navbar","Full changelog screen coming soon, Changelog: i totally aded group chats.")'>Chan- ge Log</button>
 				<button class="meower-styled-button" onclick="sussybaka()"><img alt="sus thing"></img></button>
 				<button class="meower-styled-button" onclick="tohomeSB()"></button>
+				<button class="meower-styled-button" onclick="groupchats()">Group Chats</button>
 			</div>
 			<div id = "UsersOnline">
 				<p id="UsersCount">OOPS! The code might not be working!</p>
@@ -109,7 +109,94 @@
 			<button class="BIG CENTERED" onclick="location.reload()">Wanna log back in?</button>
 		</div>
 		<div id="group-chats">
-
+			<p2>Group cat</p2>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
+			<img src="./Assets/Art/Icons/icon_21.svg" alt="MEOW"></img>
 		</div>
 	</body>
 </html>
